[project]
name = "yappily"
version = "0.1.0"
description = "Post the same message to Twitter ðŸ¦œ, Hachyderm ðŸ˜, and ðŸŒ¤ï¸Bluesky."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atproto>=0.0.56",
    "mastodon-py>=1.8.1",
    "requests>=2.32.3",
    # Missing from Tweepy.
    "standard-imghdr>=3.13.0",
    "tweepy>=4.14.0",
]
